Readability fixes / Rouge HL / Beg impl clickmenu

--- a/assets/css/_page.scss
+++ b/assets/css/_page.scss
@@ -88,6 +88,8 @@ header {
       text-shadow: .1em .1em 1em #000;
     }
 
+    input{display:none}
+
     ul {
 
       list-style:none;
@@ -169,9 +171,17 @@ header {
 
 
 .breadCrumbs {
+  margin: 0;
+  padding-left: .25em;
   font: 12pt "RobotoCondensed", "Liberation Sans Narrow", "Arial Narrow", "Helvetica Narrow", sans;
   a:link {
     font-weight: bold;
+  }
+
+  h1 {
+
+    display: inline;
+    text-shadow: .1em .1em .25em #000;
   }
 }
 
@@ -219,15 +229,16 @@ header {
 
 main {
   background: rgba(255,255,255,.8);
-  //background-image:
-  //linear-gradient( to bottom, rgba(0,255,255,.3), 
-  //  rgba(0,0,64,1) 7px, rgba(0,0,64,1) 99%, 
-  //  rgba(0,255,255,.3) ); 
+  background-image:
+    linear-gradient( to bottom, rgba(255,255,255,0), 
+    rgba(255,255,255,.8) 1%, rgba(255,255,255,.8) 99%, 
+    rgba(255,255,255,0) ); 
 
   article {
     background: #fff;
     border-radius: .5em;
     padding: .25em;
+    padding-top: .25em;
 
     font-family: "RobotoCondensed", "Arial Narrow", "Liberation Sans Narrow", Helvetica;
     color: #000;
@@ -255,15 +266,21 @@ main {
     }
 
     .post-entry {
+      margin-top: 0;
+      padding-top: 0;
       font: 12pt "Palatino Linotype", "Book Antiqua", Palatino, serif;
       color: #000;
-
-      .post-header {
+      h1 {
+        display: none;
+      }
+      .post-footer {
         font-family: "RobotoCondensed", "Arial Narrow", "Liberation Sans Narrow", Helvetica;
         font-weight: bold;        
         
-        .post-title {
-          font-size: 24pt;
+        h1 {
+          padding-top: 0;
+          margin-top: 0;
+          font-size: 18pt;
         }
 
         h2 {
